<resources>
    <string name="app_name">Demo</string>
    <string name="main_bottom_menu_widget">控件</string>
    <string name="main_bottom_menu_tool">工具</string>
    <string name="main_bottom_menu_demo">示例</string>
    <string name="open_bluetooth">打开蓝牙</string>
    <string name="start_scan_bluetooth">开启扫描</string>
    <string name="stop_start_bluetooth">停止扫描</string>

    <!--蓝牙音乐-->
    <string name="add_device">添加设备</string>
    <string name="music_play">播放</string>
    <string name="music_prev">上一曲</string>
    <string name="music_next">下一曲</string>
    <string name="right_slash">/</string>
    <string name="play_time_default">00:00</string>
    <string name="music_icon">音乐图标</string>
    <string name="m_g_music">咪咕音乐</string>
    <string name="bluetooth_music">蓝牙音乐</string>
    <string name="usb_music">USB音乐</string>
</resources>