<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bluetooth.BluetoothMusicActivity">

    <FrameLayout
        android:id="@+id/container_fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_58"
        android:layout_marginTop="@dimen/dp_105"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mg_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m_g_music"
            android:textColor="#000000"
            android:textSize="@dimen/sp_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_6"
            android:layout_marginRight="@dimen/dp_6"
            android:text="@string/right_slash"
            android:textColor="#000000"
            android:textSize="@dimen/sp_24" />

        <TextView
            android:id="@+id/ly_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_music"
            android:textColor="#E40078"
            android:textSize="@dimen/sp_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_6"
            android:layout_marginRight="@dimen/dp_6"
            android:text="@string/right_slash"
            android:textColor="#000000"
            android:textSize="@dimen/sp_24" />

        <TextView
            android:id="@+id/usb_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usb_music"
            android:textColor="#000000"
            android:textSize="@dimen/sp_24" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>